<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<EditTextPreference android:key="@string/pref_precision_key"
		android:title="@string/precision_setting_label" android:summary="@string/precision_setting_summary"
		android:defaultValue="0.25" />
	<CheckBoxPreference android:title="Exclude lunch"
		android:defaultValue="false" android:key="@string/pref_exclude_lunch_time_key"
		android:summary="Exclude lunch time that overlaps work time"></CheckBoxPreference>
	<TimePickerPreference android:key="@string/pref_lunch_start_key"
		android:title="@string/lunch_start_label" android:summary="@string/lunch_start_summary"
		android:defaultValue="11:30" android:dependency="@string/pref_exclude_lunch_time_key" />
	<TimePickerPreference android:key="@string/pref_lunch_end_key"
		android:title="@string/lunch_end_label" android:summary="@string/lunch_end_summary"
		android:defaultValue="12:30" android:dependency="@string/pref_exclude_lunch_time_key" />
</PreferenceScreen>
